--- a/BaiThucHanh0703/Views/Shared/_Layout.cshtml
+++ b/BaiThucHanh0703/Views/Shared/_Layout.cshtml
@@ -29,6 +29,11 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="Index">Student</a>
                         </li>
+                           <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="GiaiPhuongTrinhBacMot">Giai ptb1</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Student" asp-action="GiaiPhuongTrinhBacHai">Giai phuong trinh</a>
                         <li class="nav-item">
                     </ul>
                 </div>
